# raylib-starter

./: .gitignore  CMakeLists.txt
cmake/: Dependencies.cmake
include/view/: colorschemes.h
src/: main.c
